# bo-as-assistant-for-vf

./: .gitignore  LICENSE  README.md  app.py  bayesian_optimization.py  index.html  pyproject.toml
static/: script.js  style.css
templates/: index.html
