[project]
name = "bo-as-assistant-for-vf"
version = "0.1.0"
description = "BO as Assistant for Variable Fonts"
authors = [
    { name = "Dummy User", email = "dummy@gmail.com" }
]
dependencies = [
    "pysequentiallinesearch @ git+https://github.com/yuki-koyama/sequential-line-search.git",
    "flask>=3.0.3",
    "flask-cors>=4.0.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bo_as_assistant_for_vf"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
extend-include = ["*.ipynb"]
